Fix whitespaces

--- a/app/assets/stylesheets/events.css.sass
+++ b/app/assets/stylesheets/events.css.sass
@@ -10,11 +10,11 @@ ol.events
       color: #b01111
     ul.presentations
       list-style-type: decimal
-      margin: .4em 0 0 3.6em
+      margin: .8em 0 0 3.6em
       font-size: .8em
       line-height: 1.2em
       li.presentation
-        margin: 0 0 .8em
+        margin: 0 0 1em
         .topic
           -webkit-hyphens: auto
         .author
